--- a/WEB-INF/classes/shiro.ini
+++ b/WEB-INF/classes/shiro.ini
@@ -1,6 +1,6 @@
 [main]
 
-vmsRealm = org.apache.shiro.realm.neo.RestSSOLocal
+#vmsRealm = org.apache.shiro.realm.neo.RestSSOLocal
 #vmsRealm = org.apache.shiro.realm.neo.RestSSO
 
 #securityManager.realms = $vmsRealm
@@ -11,6 +11,27 @@ sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 securityManager.sessionMode=native
 securityManager.sessionManager.globalSessionTimeout = 60000
 securityManager.sessionManager = $sessionManager
+
+# password matcher
+passwordMatcher = org.apache.shiro.authc.credential.Md5CredentialsMatcher
+
+ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+ds.serverName = localhost
+ds.user = billing
+ds.password = a
+ds.databaseName = billing
+jdbcRealm.dataSource=$ds
+
+jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
+jdbcRealm.permissionsLookupEnabled = true
+jdbcRealm.authenticationQuery = SELECT PASSWORD FROM user_info where id =?
+jdbcRealm.userRolesQuery = SELECT role_id FROM user_role WHERE user_id = ?
+jdbcRealm.permissionsQuery  = SELECT role_name FROM billing.users_roles where username =?
+jdbcRealm.permissionsLookupEnabled =true
+jdbcRealm.credentialsMatcher = $passwordMatcher
+jdbcRealm.dataSource=$ds
+securityManager.realms = $jdbcRealm
+jdbcRealm.authenticationCachingEnabled = true
 
 authc.loginUrl = /login.jsp
 authc.failureKeyAttribute=loginResult
